kubernetes/deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-checker
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: textchecker-front
        image: ghcr.io/cdsl-research/text-checker/front:master-f4f325b
        ports: 
        - containerPort: 8000
      - name: textchecker-backend
        image: ghcr.io/cdsl-research/text-checker/backend:master-f4f325b
        ports:
        - containerPort: 3000
