kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tcheck-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
