kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-dojo-demo2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tcheck-service
            port:
              number: 8000
